fix: let nav menu title fit on small screens

--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ h1 small {
 		right: 0;
 		width: 100%;
 	}
+	#map-subject {
+		font-size: 30px;
+	}
 }
 
 #nav-btn {
